--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -6,18 +6,22 @@
 <body>
   <h2>Login to Biomedlink</h2>
 
-  {% if error %}
-    <p style="color:red;">{{ error }}</p>
-  {% endif %}
-
   <form method="post" action="/login">
-    <label>Email:</label><br>
-    <input type="email" name="email" required><br><br>
+  <label>Email:</label>
+  <input type="email" name="email" required><br><br>
 
-    <label>Password:</label><br>
-    <input type="password" name="password" required><br><br>
+  <label>Password:</label>
+  <input type="password" name="password" required><br><br>
 
-    <button type="submit">Login</button>
+  <button type="submit">Login</button>
+</form>
+
+{% if error %}
+  <p style="color:red;">{{ error }}</p>
+{% endif %}
+
+<p><a href="/register">Don't have an account? Register here</a></p>
+
   </form>
 </body>
 </html>
