--- a/backend/templates/pharmalab.html
+++ b/backend/templates/pharmalab.html
@@ -40,5 +40,10 @@
   };
 </script>
 
+  <form action="/logout" method="get">
+  <button type="submit">Logout</button>
+</form>
+
+
 </body>
 </html>
