--- a/backend/templates/client.html
+++ b/backend/templates/client.html
@@ -8,6 +8,11 @@
 
   <p><a href="/serviceorder">Request Form</a></p>
 
+  <form action="/logout" method="get">
+  <button type="submit">Logout</button>
+</form>
+
+
   
 </body>
 </html>
