--- a/backend/templates/serviceorder.html
+++ b/backend/templates/serviceorder.html
@@ -50,6 +50,10 @@
     <p>No service orders submitted yet.</p>
   {% endif %}
 
+  <a href="/download-serviceorders-pdf" target="_blank">
+  <button>Download PDF</button>
+</a>
+
   <br><a href="/pharmalab">← Back to Dashboard</a>
 </body>
 </html>
