--- a/backend/templates/jobcard.html
+++ b/backend/templates/jobcard.html
@@ -72,7 +72,12 @@
   {% endif %}
 
   <br>
-  <p><a href="/download-jobcards" target="_blank">📄 Download All Job Cards (PDF)</a></p>
+  
+    <a href="/download-jobcards" target="_blank">
+  <button>Download PDF</button>
+</a>
+ <br>
+  
   <p><a href="/pharmalab">← Back to Dashboard</a></p>
 </body>
 </html>
