--- a/backend/templates/serviceorder.html
+++ b/backend/templates/serviceorder.html
@@ -22,6 +22,9 @@
     <label>Name of Engineer:</label><br>
     <input type="text" name="engineer_name" required><br><br>
 
+    <label>Site / Hospital:</label><br>
+    <input type="text" name="site_hospital" required><br><br>
+
     <label>Mission/Service Order Purpose:</label><br>
     <textarea name="issue" rows="3" cols="40" required></textarea><br><br>
 
