--- a/backend/templates/serviceorder.html
+++ b/backend/templates/serviceorder.html
@@ -56,6 +56,7 @@
         <tr>
           <th>ID</th>
           <th>Engineer</th>
+          <th>Site / Hospital</th>
           <th>Purpose</th>
           <th>Spare Parts</th>
           <th>Arrival</th>
@@ -70,6 +71,7 @@
         <tr>
           <td>{{ so.id }}</td>
           <td>{{ so.engineer_name }}</td>
+          <td>{{ so.site_hospital }}</td>
           <td>{{ so.issue }}</td>
           <td>{{ so.spare_parts }}</td>
           <td>{{ so.arrival_date.strftime('%Y-%m-%d') }}</td>
