--- a/backend/templates/serviceorder.html
+++ b/backend/templates/serviceorder.html
@@ -18,7 +18,7 @@
 <body>
   <h2>Service Order Form</h2>
 
-  <form method="post" action="/submit-serviceorder">
+  <form method="post" action="/submit-serviceorder" enctype="multipart/form-data">
     <label>Name of Engineer:</label><br>
     <input type="text" name="engineer_name" required><br><br>
 
