--- a/backend/templates/serviceorder.html
+++ b/backend/templates/serviceorder.html
@@ -19,7 +19,7 @@
   <h2>Service Order Form</h2>
 
   <form method="post" action="/submit-serviceorder" enctype="multipart/form-data">
-    <label>Name of Engineer:</label><br>
+    <label>Name of Engineer/Technician:</label><br>
     <input type="text" name="engineer_name" required><br><br>
 
     <label>Site / Hospital:</label><br>
@@ -28,7 +28,7 @@
     <label>Mission/Service Order Purpose:</label><br>
     <textarea name="issue" rows="3" cols="40" required></textarea><br><br>
 
-    <label>Spare Parts Used:</label><br>
+    <label>Spare Parts Needed:</label><br>
     <textarea name="spare_parts" rows="2" cols="40"></textarea><br><br>
 
     <label>Arrival Date:</label><br>
