--- a/backend/templates/jobcard.html
+++ b/backend/templates/jobcard.html
@@ -53,6 +53,7 @@
           <th>Date of Service</th>
           <th>Spare Parts Used</th>
           <th>File</th>
+          <th>Actions</th> <!-- NEW -->
         </tr>
       </thead>
       <tbody>
